[HYPERSHELL-49] api: define service account contract
