# components/api-server/pkg/api/openapi/model_open_shell_gateway_service_account_list.go
@@ -1,0 +1,268 @@
+/*
+HyperShell API
+
+HyperShell fleet management API
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"bytes"
+	"encoding/json"
+	"fmt"
+)
+
+// checks if the OpenShellGatewayServiceAccountList type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &OpenShellGatewayServiceAccountList{}
+
+// OpenShellGatewayServiceAccountList struct for OpenShellGatewayServiceAccountList
+type OpenShellGatewayServiceAccountList struct {
+	Page         int32                                      `json:"page"`
+	Size         int32                                      `json:"size"`
+	Total        int32                                      `json:"total"`
+	Capabilities OpenShellGatewayServiceAccountCapabilities `json:"capabilities"`
+	Items        []OpenShellGatewayServiceAccountListItem   `json:"items"`
+}
+
+type _OpenShellGatewayServiceAccountList OpenShellGatewayServiceAccountList
+
+// NewOpenShellGatewayServiceAccountList instantiates a new OpenShellGatewayServiceAccountList object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewOpenShellGatewayServiceAccountList(page int32, size int32, total int32, capabilities OpenShellGatewayServiceAccountCapabilities, items []OpenShellGatewayServiceAccountListItem) *OpenShellGatewayServiceAccountList {
+	this := OpenShellGatewayServiceAccountList{}
+	this.Page = page
+	this.Size = size
+	this.Total = total
+	this.Capabilities = capabilities
+	this.Items = items
+	return &this
+}
+
+// NewOpenShellGatewayServiceAccountListWithDefaults instantiates a new OpenShellGatewayServiceAccountList object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewOpenShellGatewayServiceAccountListWithDefaults() *OpenShellGatewayServiceAccountList {
+	this := OpenShellGatewayServiceAccountList{}
+	return &this
+}
+
+// GetPage returns the Page field value
+func (o *OpenShellGatewayServiceAccountList) GetPage() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.Page
+}
+
+// GetPageOk returns a tuple with the Page field value
+// and a boolean to check if the value has been set.
+func (o *OpenShellGatewayServiceAccountList) GetPageOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Page, true
+}
+
+// SetPage sets field value
+func (o *OpenShellGatewayServiceAccountList) SetPage(v int32) {
+	o.Page = v
+}
+
+// GetSize returns the Size field value
+func (o *OpenShellGatewayServiceAccountList) GetSize() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.Size
+}
+
+// GetSizeOk returns a tuple with the Size field value
+// and a boolean to check if the value has been set.
+func (o *OpenShellGatewayServiceAccountList) GetSizeOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Size, true
+}
+
+// SetSize sets field value
+func (o *OpenShellGatewayServiceAccountList) SetSize(v int32) {
+	o.Size = v
+}
+
+// GetTotal returns the Total field value
+func (o *OpenShellGatewayServiceAccountList) GetTotal() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.Total
+}
+
+// GetTotalOk returns a tuple with the Total field value
+// and a boolean to check if the value has been set.
+func (o *OpenShellGatewayServiceAccountList) GetTotalOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Total, true
+}
+
+// SetTotal sets field value
+func (o *OpenShellGatewayServiceAccountList) SetTotal(v int32) {
+	o.Total = v
+}
+
+// GetCapabilities returns the Capabilities field value
+func (o *OpenShellGatewayServiceAccountList) GetCapabilities() OpenShellGatewayServiceAccountCapabilities {
+	if o == nil {
+		var ret OpenShellGatewayServiceAccountCapabilities
+		return ret
+	}
+
+	return o.Capabilities
+}
+
+// GetCapabilitiesOk returns a tuple with the Capabilities field value
+// and a boolean to check if the value has been set.
+func (o *OpenShellGatewayServiceAccountList) GetCapabilitiesOk() (*OpenShellGatewayServiceAccountCapabilities, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Capabilities, true
+}
+
+// SetCapabilities sets field value
+func (o *OpenShellGatewayServiceAccountList) SetCapabilities(v OpenShellGatewayServiceAccountCapabilities) {
+	o.Capabilities = v
+}
+
+// GetItems returns the Items field value
+func (o *OpenShellGatewayServiceAccountList) GetItems() []OpenShellGatewayServiceAccountListItem {
+	if o == nil {
+		var ret []OpenShellGatewayServiceAccountListItem
+		return ret
+	}
+
+	return o.Items
+}
+
+// GetItemsOk returns a tuple with the Items field value
+// and a boolean to check if the value has been set.
+func (o *OpenShellGatewayServiceAccountList) GetItemsOk() ([]OpenShellGatewayServiceAccountListItem, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Items, true
+}
+
+// SetItems sets field value
+func (o *OpenShellGatewayServiceAccountList) SetItems(v []OpenShellGatewayServiceAccountListItem) {
+	o.Items = v
+}
+
+func (o OpenShellGatewayServiceAccountList) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o OpenShellGatewayServiceAccountList) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["page"] = o.Page
+	toSerialize["size"] = o.Size
+	toSerialize["total"] = o.Total
+	toSerialize["capabilities"] = o.Capabilities
+	toSerialize["items"] = o.Items
+	return toSerialize, nil
+}
+
+func (o *OpenShellGatewayServiceAccountList) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"page",
+		"size",
+		"total",
+		"capabilities",
+		"items",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err
+	}
+
+	for _, requiredProperty := range requiredProperties {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varOpenShellGatewayServiceAccountList := _OpenShellGatewayServiceAccountList{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varOpenShellGatewayServiceAccountList)
+
+	if err != nil {
+		return err
+	}
+
+	*o = OpenShellGatewayServiceAccountList(varOpenShellGatewayServiceAccountList)
+
+	return err
+}
+
+type NullableOpenShellGatewayServiceAccountList struct {
+	value *OpenShellGatewayServiceAccountList
+	isSet bool
+}
+
+func (v NullableOpenShellGatewayServiceAccountList) Get() *OpenShellGatewayServiceAccountList {
+	return v.value
+}
+
+func (v *NullableOpenShellGatewayServiceAccountList) Set(val *OpenShellGatewayServiceAccountList) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableOpenShellGatewayServiceAccountList) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableOpenShellGatewayServiceAccountList) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableOpenShellGatewayServiceAccountList(val *OpenShellGatewayServiceAccountList) *NullableOpenShellGatewayServiceAccountList {
+	return &NullableOpenShellGatewayServiceAccountList{value: val, isSet: true}
+}
+
+func (v NullableOpenShellGatewayServiceAccountList) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableOpenShellGatewayServiceAccountList) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
