# components/api-server/pkg/api/openapi/model_open_shell_gateway_service_account_role.go
@@ -1,0 +1,110 @@
+/*
+HyperShell API
+
+HyperShell fleet management API
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// OpenShellGatewayServiceAccountRole the model 'OpenShellGatewayServiceAccountRole'
+type OpenShellGatewayServiceAccountRole string
+
+// List of OpenShellGatewayServiceAccountRole
+const (
+	OPENSHELL_USER  OpenShellGatewayServiceAccountRole = "openshell-user"
+	OPENSHELL_ADMIN OpenShellGatewayServiceAccountRole = "openshell-admin"
+)
+
+// All allowed values of OpenShellGatewayServiceAccountRole enum
+var AllowedOpenShellGatewayServiceAccountRoleEnumValues = []OpenShellGatewayServiceAccountRole{
+	"openshell-user",
+	"openshell-admin",
+}
+
+func (v *OpenShellGatewayServiceAccountRole) UnmarshalJSON(src []byte) error {
+	var value string
+	err := json.Unmarshal(src, &value)
+	if err != nil {
+		return err
+	}
+	enumTypeValue := OpenShellGatewayServiceAccountRole(value)
+	for _, existing := range AllowedOpenShellGatewayServiceAccountRoleEnumValues {
+		if existing == enumTypeValue {
+			*v = enumTypeValue
+			return nil
+		}
+	}
+
+	return fmt.Errorf("%+v is not a valid OpenShellGatewayServiceAccountRole", value)
+}
+
+// NewOpenShellGatewayServiceAccountRoleFromValue returns a pointer to a valid OpenShellGatewayServiceAccountRole
+// for the value passed as argument, or an error if the value passed is not allowed by the enum
+func NewOpenShellGatewayServiceAccountRoleFromValue(v string) (*OpenShellGatewayServiceAccountRole, error) {
+	ev := OpenShellGatewayServiceAccountRole(v)
+	if ev.IsValid() {
+		return &ev, nil
+	} else {
+		return nil, fmt.Errorf("invalid value '%v' for OpenShellGatewayServiceAccountRole: valid values are %v", v, AllowedOpenShellGatewayServiceAccountRoleEnumValues)
+	}
+}
+
+// IsValid return true if the value is valid for the enum, false otherwise
+func (v OpenShellGatewayServiceAccountRole) IsValid() bool {
+	for _, existing := range AllowedOpenShellGatewayServiceAccountRoleEnumValues {
+		if existing == v {
+			return true
+		}
+	}
+	return false
+}
+
+// Ptr returns reference to OpenShellGatewayServiceAccountRole value
+func (v OpenShellGatewayServiceAccountRole) Ptr() *OpenShellGatewayServiceAccountRole {
+	return &v
+}
+
+type NullableOpenShellGatewayServiceAccountRole struct {
+	value *OpenShellGatewayServiceAccountRole
+	isSet bool
+}
+
+func (v NullableOpenShellGatewayServiceAccountRole) Get() *OpenShellGatewayServiceAccountRole {
+	return v.value
+}
+
+func (v *NullableOpenShellGatewayServiceAccountRole) Set(val *OpenShellGatewayServiceAccountRole) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableOpenShellGatewayServiceAccountRole) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableOpenShellGatewayServiceAccountRole) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableOpenShellGatewayServiceAccountRole(val *OpenShellGatewayServiceAccountRole) *NullableOpenShellGatewayServiceAccountRole {
+	return &NullableOpenShellGatewayServiceAccountRole{value: val, isSet: true}
+}
+
+func (v NullableOpenShellGatewayServiceAccountRole) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableOpenShellGatewayServiceAccountRole) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
