# components/api-server/pkg/api/openapi/model_open_shell_gateway_service_account_status.go
@@ -1,0 +1,120 @@
+/*
+HyperShell API
+
+HyperShell fleet management API
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// OpenShellGatewayServiceAccountStatus the model 'OpenShellGatewayServiceAccountStatus'
+type OpenShellGatewayServiceAccountStatus string
+
+// List of OpenShellGatewayServiceAccountStatus
+const (
+	PROVISIONING OpenShellGatewayServiceAccountStatus = "provisioning"
+	READY        OpenShellGatewayServiceAccountStatus = "ready"
+	EXPIRED      OpenShellGatewayServiceAccountStatus = "expired"
+	REVOKING     OpenShellGatewayServiceAccountStatus = "revoking"
+	REVOKED      OpenShellGatewayServiceAccountStatus = "revoked"
+	DELETING     OpenShellGatewayServiceAccountStatus = "deleting"
+	ERROR        OpenShellGatewayServiceAccountStatus = "error"
+)
+
+// All allowed values of OpenShellGatewayServiceAccountStatus enum
+var AllowedOpenShellGatewayServiceAccountStatusEnumValues = []OpenShellGatewayServiceAccountStatus{
+	"provisioning",
+	"ready",
+	"expired",
+	"revoking",
+	"revoked",
+	"deleting",
+	"error",
+}
+
+func (v *OpenShellGatewayServiceAccountStatus) UnmarshalJSON(src []byte) error {
+	var value string
+	err := json.Unmarshal(src, &value)
+	if err != nil {
+		return err
+	}
+	enumTypeValue := OpenShellGatewayServiceAccountStatus(value)
+	for _, existing := range AllowedOpenShellGatewayServiceAccountStatusEnumValues {
+		if existing == enumTypeValue {
+			*v = enumTypeValue
+			return nil
+		}
+	}
+
+	return fmt.Errorf("%+v is not a valid OpenShellGatewayServiceAccountStatus", value)
+}
+
+// NewOpenShellGatewayServiceAccountStatusFromValue returns a pointer to a valid OpenShellGatewayServiceAccountStatus
+// for the value passed as argument, or an error if the value passed is not allowed by the enum
+func NewOpenShellGatewayServiceAccountStatusFromValue(v string) (*OpenShellGatewayServiceAccountStatus, error) {
+	ev := OpenShellGatewayServiceAccountStatus(v)
+	if ev.IsValid() {
+		return &ev, nil
+	} else {
+		return nil, fmt.Errorf("invalid value '%v' for OpenShellGatewayServiceAccountStatus: valid values are %v", v, AllowedOpenShellGatewayServiceAccountStatusEnumValues)
+	}
+}
+
+// IsValid return true if the value is valid for the enum, false otherwise
+func (v OpenShellGatewayServiceAccountStatus) IsValid() bool {
+	for _, existing := range AllowedOpenShellGatewayServiceAccountStatusEnumValues {
+		if existing == v {
+			return true
+		}
+	}
+	return false
+}
+
+// Ptr returns reference to OpenShellGatewayServiceAccountStatus value
+func (v OpenShellGatewayServiceAccountStatus) Ptr() *OpenShellGatewayServiceAccountStatus {
+	return &v
+}
+
+type NullableOpenShellGatewayServiceAccountStatus struct {
+	value *OpenShellGatewayServiceAccountStatus
+	isSet bool
+}
+
+func (v NullableOpenShellGatewayServiceAccountStatus) Get() *OpenShellGatewayServiceAccountStatus {
+	return v.value
+}
+
+func (v *NullableOpenShellGatewayServiceAccountStatus) Set(val *OpenShellGatewayServiceAccountStatus) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableOpenShellGatewayServiceAccountStatus) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableOpenShellGatewayServiceAccountStatus) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableOpenShellGatewayServiceAccountStatus(val *OpenShellGatewayServiceAccountStatus) *NullableOpenShellGatewayServiceAccountStatus {
+	return &NullableOpenShellGatewayServiceAccountStatus{value: val, isSet: true}
+}
+
+func (v NullableOpenShellGatewayServiceAccountStatus) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableOpenShellGatewayServiceAccountStatus) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
